blrlblelrlrl
/home/pi/midiMind/backend/src/storage/SessionManager.cpp:29:9: warning: #pragma once in main file
   29 | #pragma once
      |         ^~~~
[ 40%] Building CXX object CMakeFiles/midimind.dir/src/timing/TimestampManager.cpp.o
/home/pi/midiMind/backend/src/storage/SessionManager.cpp:184:10: error: ‘optional’ in namespace ‘std’ does not name a template type
  184 |     std::optional<Session> load(int id);
      |          ^~~~~~~~
/home/pi/midiMind/backend/src/storage/SessionManager.cpp:39:1: note: ‘std::optional’ is defined in header ‘<optional>’; this is probably fixable by adding ‘#include <optional>’
   38 | #include <thread>
  +++ |+#include <optional>
   39 | #include <functional>
make[2]: *** [CMakeFiles/midimind.dir/build.make:219: CMakeFiles/midimind.dir/src/storage/SessionManager.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
